fixed spacing

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -124,7 +124,7 @@ button:focus {
 
     span.more-details {
       display: flex;
-      justify-content: flex-start;
+      justify-content: flex-end;
       align-items: center;
       i {
         margin: 5px;
@@ -136,6 +136,7 @@ button:focus {
     }
 
     .transaction-amount {
+      width: 150px;
       text-align: right;
       margin-right: 30px;
     }
